Replace watchos independent app with ios watch extension for watchos 4 compatibility

--- a/BougsApp-iOS/Supporting Files/Info.plist
+++ b/BougsApp-iOS/Supporting Files/Info.plist
@@ -6,6 +6,8 @@
 	<string>http://192.168.100.115:8180</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>BogusApp</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
