--- a/WatchOS/Info.plist
+++ b/WatchOS/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>BougsApp-iOS</string>
+	<string>BougsApp</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -26,6 +26,8 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>ro.iliemarius.BougsApp-iOS</string>
+	<string>ro.iliemarius.BougsApp</string>
+	<key>WKWatchKitApp</key>
+	<true/>
 </dict>
 </plist>
